2020-05-12 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Ensure compatibility with TYPO3 10 LTS and updates to external_import and connector services, resolves #5
	* Update documentation settings, resolves #6
	* Release version 2.3.0

2019-01-13 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Ensure compatibility with TYPO3 9 LTS, drop support for TYPO3 7
	* Adapt code to new Connector Services possibilities
	* Update documentation
	* Change icons to SVG
	* Release version 2.2.0

2018-02-17 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Released version 2.1.1

2018-02-15 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Corrected composer dependencies declaration

2018-02-04 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Updated for TYPO3 CMS 8 LTS and External Import 4.0
	* Updated documentation
	* Released version 2.1.0

2016-08-03 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Corrected wrong namespaces, resolves #77382
	* Released version 2.0.1, resolves #77395

2016-06-13 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Adapted to renamed configuration properties, resolves #76620
	* Added composer support, resolves #76622
	* Released version 2.0.0, resolves #76580

2016-06-10 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Updated and restructured for TYPO3 CMS 7 LTS, resolves #76575
	* Migrated language file to XLIFF, resolves #76577
	* Updated documentation, resolves #76579

2014-06-19 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Corrected LaTeX setup for PDF rendering, resolves #59665
	* Released version 1.6.1, resolves #59668

2014-06-05 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Released version 1.6.0, resolves #59320

2014-06-03 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Moved documentation to reStructuredText, resolves #58402
	* Verified compatibility with TYPO3 CMS 6.2, resolves #58401

2014-06-01 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Made all user functions and hooks into singletons, resolves #58400
