@@ -15,8 +15,10 @@ return [
                 'searchFields' => 'code,name',
                 'typeicon_classes' => [
                         'default' => 'tx_externalimport_tut-department'
-                ],
-                'external' => [
+                ]
+        ],
+        'external' => [
+                'general' => [
                         0 => [
                                 'connector' => 'csv',
                                 'parameters' => [
@@ -40,7 +42,7 @@ return [
         'columns' => [
                 'hidden' => [
                         'exclude' => 1,
-                        'label' => 'LLL:EXT:lang/Resources/Private/Language/locallang_general.xlf:LGL.hidden',
+                        'label' => 'LLL:EXT:core/Resources/Private/Language/locallang_general.xlf:LGL.hidden',
                         'config' => [
                                 'type' => 'check',
                                 'default' => '0'
